HVT classes, Vulkan headers